<resources>
    <string name="app_name">Intents</string>
    <string name="parameter">Parameter</string>
    <string name="open_activity_with_explicit_intent">Open activity with Explicit Intent</string>
    <string name="teste">teste</string>
    <string name="return_and_close">Return and close</string>
    <string name="implicit_intents">Implicit intents</string>
    <string name="open_activity">open activity</string>
    <string name="open_browser">Open browser</string>
    <string name="call_a_number">Call a number</string>
    <string name="open_dialer">Open dialer</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="choose_a_viewer">Choose a viewer</string>
    <string name="initial_value">Initial value</string>
</resources>